--- a/index.html
+++ b/index.html
@@ -4,38 +4,52 @@
       <script src="script.js"></script>
       <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <div class="maindiv">
-            <h1>Simple Interest Calculator</h1>
-            <div class="data">
-                Amount
-                <input onsubmit="checkdata()" type="number" id="principal">
-                <br><br>
-                Interest Rate
-                <input onchange="updateRate()" type="range" id="rate" min="1" max="20" value="10.25" step="0.25">
-                <span id="rate_value">10.50%</span>
-                <br><br>
-                No. of Years
-                <select id="years">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                </select>
-                <br><br>
-                <button onclick="compute()">Compute Interest</button>
-                <span id="result"></span>
+    <body><main>
+        <div>
+            <h1 class="title">Simple Interest Calculator</h1>
+            <div class="maindiv">
+                <table id="table">
+                    <tbody>
+                        <tr>
+                            <td class="labels">Amount </td>
+                            <td>
+                                <input type="number" id="principal" min="0">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="labels">Interest Rate </td>
+                            <td>
+                                <input type="range" min="0" max="20" step="0.25" value="10.50" id="rate" name="rate" onchange="updateRate()">
+                                <span id="rate_value">10.50%</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="labels">No. of Years</td>
+                            <td>
+                                <select name="years" id="years">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                </select>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <button id="compute" onclick="compute()">Calculate Interest</button><br>
+                <span id="result">
+                </span>
                 </div>
-            <main>
-                <h2>&#169; Everyone Can Get Rich</h2>
-            </main>
-        </div>
-            <p>This calculator belongs to Austin Flores&trade;</p>
+                <br>
+            </div>
+        <h2 class="copyright">&#169; Everyone Can Get Rich</h2>
+    </main>
+    <h3 class="tm"> This calculator belongs to Austin Flores&trade;</h3>
     </body>
 </html>
