--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                         <tr>
                             <td class="labels">Amount </td>
                             <td>
-                                <input type="number" id="principal" min="0">
+                                <input type="number" step="0.01" placeholder="$0.00" id="principal" min="0">
                             </td>
                         </tr>
                         <tr>
