--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 </div>
                 <br>
             </div>
-        <h2 class="copyright">&#169; Everyone Can Get Rich</h2>
+            <footer>
+                <h2 class="copyright">&#169; Everyone Can Get Rich</h2>
+            </footer>
     </main>
     <h3 class="tm"> This calculator belongs to Austin Flores&trade;</h3>
     </body>
