--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                         </tr>
                     </tbody>
                 </table>
-                <button id="compute" onclick="compute()">Calculate Interest</button><br>
+                <button id="compute" onclick="compute()">Calculate Interest</button>
+                <br><br>
                 <span id="result">
                 </span>
                 </div>
