--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-      <title>Simple Interest Calculator.app</title>
+      <title>Web App - Simple Interest Calculator.app</title>
       <script src="script.js"></script>
       <link rel="stylesheet" href="style.css">
     </head>
