--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <tr>
                             <td class="labels">Interest Rate </td>
                             <td>
-                                <input type="range" min="1" max="20" step="0.25" value="10.50" id="rate" name="rate" onchange="updateRate()">
+                                <input type="range" min="1" max="20" value="10.50" step="0.25" id="rate" clase="rate" oninput="updateRate()">
                                 <span id="rate_value">10.50%</span>
                             </td>
                         </tr>
